tests/machine/x/c/slice.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/slice.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/slice.c:79:23: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   79 |   list_int tmp3 = {3, tmp1};
      |                       ^~~~
/workspace/mochi/tests/machine/x/c/slice.c:87:23: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   87 |   list_int tmp6 = {3, tmp4};
      |                       ^~~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
